FLOWERS-H8a: derived delivery promise, product preparation time, batched ATS (ADR-20) (#1210)
